fix: search query builder